--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/4e67059bd6.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
